# mcgen

./: .gitignore  Taskfile.yml  __init__.py  __main__.py  pyproject.toml
cli/: main.py
cli/controllers/: base.py
cli/core/: meta.py
internal/: __init__.py  core.py  palette.py
scripts/: distribute.py
static/: palette.json
